@@ -2,6 +2,12 @@
  *
  */
 
+2008-10-30 14:01 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  * src/hrbcompat/tbrowse/wx_browse.cpp
+  * src/hrbcompat/tbrowse/wxhbrowsedbprovider.prg
+  * src/hrbcompat/tbrowse/wxhbrowse.prg
+    ! Fix small error by using RecNo PROPERTY
+
 2008-10-29 21:21 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   + src/wxbase/baseclasses/wx_event.cpp
   + src/wxbase/baseclasses/wx_gridevent.cpp
